# WPP3IL

./: .gitignore  OOP.ipynb  README.md  ariane_example.py  ariane_test.py  environment.yml  exercise_abc.py  exercise_inheritance.py  numpy_example.py  numpy_test.py  seaborntest.py  test_ariane.py
AnimalGame/: __main__.py  animals.py  config.toml  game_entity.py  gamestructure.py  player-py  player.py
AnimalGame/farm/: animals.py
AnimalGame/wild/: animals.py
Aufgabe_Whatsapp_Daten/: sortme.py
Programmier_uebungen/Aufgabe14/: Aufgabe14.py  Beschreibung.md
Programmier_uebungen/Aufgabe15/: Aufgabe15.py  Beschreibung.md  vignere.py
Programmier_uebungen/Kreuzerlteil/: Aufgabe10.py  Aufgabe13.py  Aufgabe4.py  Aufgabe8.py
Programmierhausuebung_Pandas/: Aufgabe_1.py  Aufgabe_2+3.py  Aufgabe_4.py
Programmierhausuebung_Pandas/data/: .directory  DayAheadPrices-201901010000-202001010000.csv  DayAheadPrices-202001010000-202101010000.csv  DayAheadPrices-202101010000-202201010000.csv  DayAheadPrices-202201010000-202301010000.csv  StudyDegrees.csv  achilles.csv  algo_comparison.csv  babyboom.csv  brfss.csv  corona_austria_raw.csv  corrdata.csv  husbandwife.csv  husbandwife_raw.csv  pima-indians-diabetes.csv  robo_data.csv
poetry_einführung/SampleProject/: pyproject.toml
zmq/Pair_pattern/: client.py  server.py
Übungen/: Aufgabe1.py  Aufgabe11.py  Aufgabe2.py  Aufgabe3.py  Aufgabe4.py  Aufgabe5.py  Aufgabe6.py  Aufgabe8.py
Übungen/Kreuzerlteil/: Aufgabe12.py  Aufgabe7.py  Aufgabe9.py
