[project]
name = "sampleproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Julfried",email = "julian.grimm8@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sympy (>=1.13.3,<2.0.0)"
]

[tool.poetry]
packages = [{include = "sampleproject", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
